# sp1-verifier

./: Cargo.toml  HEADER-APACHE2  Makefile.toml  README.md
.github/workflows/: CI-ci-remote.yml
cli/: Cargo.toml  build.rs
cli/src/: main.rs  proof.rs
executor/: Cargo.toml  build.rs
executor/src/: block.rs  constants.rs  instructions.rs  lib.rs  perm.rs  public_values.rs  septic_extension.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
sdk/tests/: mod.rs
sp1-elf/: Cargo.toml
sp1-elf/src/: lib.rs
sp1-program/: Cargo.toml
sp1-program/src/: main.rs
sp1-zkv-cli/: Cargo.toml
sp1-zkv-cli/src/: main.rs
sp1-zkv-sdk/: Cargo.toml
sp1-zkv-sdk/examples/: generate_zkv_proof.rs
sp1-zkv-sdk/src/: lib.rs
sp1-zkv-verifier/: Cargo.toml
sp1-zkv-verifier/resources/: sp1-program
sp1-zkv-verifier/src/: checks.rs  lib.rs  merkle.rs  verifier.rs  vks.rs
sp1-zkv-verifier/tests/: verifier.rs
verifier/: Cargo.toml  build.rs
verifier/src/: lib.rs
