[workspace]
resolver = "3"
members = [ "sp1-elf", "sp1-program", "sp1-zkv-sdk", "sp1-zkv-verifier" ]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
bincode = { version = "2", default-features = false }
hex = { version = "0.4.3" }
rstest = { version = "0.25.0" }
sp1-build = { version = "5.0.5" }
sp1-core-executor = { version = "5.0.5" }
sp1-elf = { version = "5.0.5" }
sp1-prover = { version = "5.0.5" }
sp1-recursion-circuit = { version = "5.0.5" }
sp1-sdk = { version = "5.0.5" }
sp1-stark = { version = "5.0.5" }
sp1-zkvm = { version = "5.0.5" }
