[package]
name = "sp1-verifier-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
executor = {path = "../executor"}
bincode = {workspace = true}
clap = { version = "4.5.38", features = ["derive"] }
serde = {workspace = true}
sp1-sdk = {workspace = true}
sp1-stark = {workspace = true}

[build-dependencies]
sp1-build = {workspace = true}
