[package]
name = "executor"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = {workspace = true}
lazy_static = {workspace = true}
num-bigint = {workspace = true}
p3-baby-bear = {workspace = true}
p3-field = {workspace = true}
p3-poseidon2 = {workspace = true}
p3-symmetric = {workspace = true}
p3-util = {workspace = true}
serde = {workspace = true, features = ["derive"]}

sp1-derive = {workspace = true}
sp1-core-executor = {workspace = true, optional = true}
sp1-recursion-circuit = {workspace = true, optional = true}
sp1-recursion-core = {workspace = true, optional = true, features = ["debug"]}
sp1-sdk = {workspace = true, optional = true}
sp1-stark = {workspace = true, optional = true}

#[dev-dependencies]
hex-literal = {version = "1"}
rstest = {workspace = true}
serde_test = {version = "1"}

[build-dependencies]
bincode = {workspace = true}
sp1-primitives = {workspace = true}

[features]
default = ["std"]
std = [
    "sp1-core-executor",
    "sp1-recursion-circuit",
    "sp1-recursion-core",
    "sp1-sdk",
    "sp1-stark"
]
