[package]
name = "sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
executor = {path = "../executor"}
verifier = {path = "../verifier"}

anyhow = {version = "1"}
p3-baby-bear = {workspace = true}
serde = {workspace = true, features = ["derive"]}
sp1-core-executor = {workspace = true}
sp1-sdk = {workspace = true}
sp1-prover = {workspace = true}
sp1-recursion-circuit = {workspace = true}
sp1-recursion-compiler = {workspace = true}
sp1-stark = {workspace = true}

[build-dependencies]
sp1-build = {workspace = true}