[package]
name = "sp1-zkv-verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2", default-features = false, features = ["alloc", "serde"] }
itertools = { version = "0.13.0", default-features = false }
blake3 = { version = "1.8.2", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
sp1-recursion-core-no-std = { git = "https://github.com/zkVerify/sp1.git", branch = "no-std-sp1-deps", default-features = false }
sp1-stark-no-std = { git = "https://github.com/zkVerify/sp1.git", branch = "no-std-sp1-deps" }
p3-field = { git = "https://github.com/zkVerify/sp1.git", branch = "no-std-sp1-deps" }
p3-baby-bear = { git = "https://github.com/zkVerify/sp1.git", branch = "no-std-sp1-deps" }
p3-symmetric = { git = "https://github.com/zkVerify/sp1.git", branch = "no-std-sp1-deps" }

[dev-dependencies]
sp1-prover = { workspace = true }
sp1-sdk = { workspace = true }
sp1-stark = { workspace = true }

hex = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true }
sp1-sdk = { workspace = true }