[package]
name = "sp1-zkv-verifier"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
bincode = { version = "2", default-features = false, features = ["alloc", "serde"] }
itertools = { version = "0.13.0", default-features = false }
blake3 = { version = "1.8.2", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
sha2 = { version = "0.10.9", default-features = false }
p3-field = { git = "https://github.com/zkVerify/sp1.git", tag = "v5.0.5-no_std" }
p3-baby-bear = { git = "https://github.com/zkVerify/sp1.git", tag = "v5.0.5-no_std" }
p3-symmetric = { git = "https://github.com/zkVerify/sp1.git", tag = "v5.0.5-no_std" }
p3-util = { git = "https://github.com/zkVerify/sp1.git", tag = "v5.0.5-no_std" }
sp1-primitives = { git = "https://github.com/zkVerify/sp1.git", tag = "v5.0.5-no_std", default-features = false }
sp1-recursion-core-no-std = { git = "https://github.com/zkVerify/sp1.git", tag = "v5.0.5-no_std", default-features = false }
sp1-stark-no-std = { git = "https://github.com/zkVerify/sp1.git", tag = "v5.0.5-no_std" }

[dev-dependencies]
bincode = { version = "2", features = ["serde"] }
hex = { workspace = true }
rstest = { workspace = true }
sp1-sdk = { workspace = true }
p3-field-original = { version = "0.2.3-succinct", package = "p3-field" }
