[package]
name = "verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = {workspace = true}
executor = {path = "../executor"}
lazy_static = {workspace = true}
p3-baby-bear = {workspace = true}
p3-field = {workspace = true}
p3-poseidon2 = {workspace = true}
p3-symmetric = {workspace = true}
sha2 = {workspace = true}

[dev-dependencies]
sp1-sdk = {workspace = true}
sp1-core-executor = {workspace = true}
sp1-recursion-circuit = {workspace = true}
sp1-recursion-compiler = {workspace = true}

[build-dependencies]
bincode = {workspace = true}
executor = {path = "../executor"}
p3-baby-bear = {workspace = true}
sp1-sdk = {workspace = true}

[features]
default = [
    "std",
]
std = [
    "executor/std",
]
